changing first blog post name

--- a/_notebooks/2020-12-01-HAL-O-World.ipynb
+++ b/_notebooks/2020-12-01-HAL-O-World.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HAL 0 World\n",
+    "# HAL O World\n",
     "> **HAL :** Just what do you think you're doing, Dave?.\n",
     "\n",
     "- toc: true \n",
