removing asteriks and colon from Front Matter notebook header

--- a/_notebooks/2020-12-01-HAL-O-World.ipynb
+++ b/_notebooks/2020-12-01-HAL-O-World.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# HAL O World\n",
-    "> **HAL :** Just what do you think you're doing, Dave?.\n",
+    "> **HAL** Just what do you think you're doing, Dave?.\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
