--- a/_notebooks/2020-12-01-HAL-O-World.ipynb
+++ b/_notebooks/2020-12-01-HAL-O-World.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# HAL O World\n",
-    "> **HAL** Just what do you think you're doing, Dave?.\n",
+    "> Just what do you think you're doing, Dave?.\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -53,7 +53,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
