attempting to fix the youtube link

--- a/_notebooks/2020-12-01-HAL-O-World.ipynb
+++ b/_notebooks/2020-12-01-HAL-O-World.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "Working as a Technical Animator in video games and having written Python code for nearly a decade now, I was aware of juypter notebooks, but I felt that as it was only useful for creating \"pretty comments\" inline with your code. Yes it would be cool to have an animated gif as part of your documentation but how useful are they in reality? It turns out that they are awesome! I am writing this very blog post using them right now and I am really impressed. The fastai team have created this entire blogging platform `fastpages` to help people get up and running quickly. Jeremy from fastai has also created a great talk about the power of notebooks and their platform `nbdev` here which is worth a watch. \n",
     "\n",
-    "> youtube: https://www.youtube.com/watch?v=9Q6sLbz37gk"
+    "> youtube: https://youtu.be/9Q6sLbz37gk"
    ]
   },
   {
@@ -91,27 +91,27 @@
     "\n",
     "By far the most frustrating part of the set up for the course has nothing to do with Python, the notebook server, GitHub or fast.ai. In Chapter 2 of the book, the course encourages you to set up a Microsoft Azure account to get an API key so you can use their Image Search conginitive service to pull training images from the web to train a classifier model. Unfortunately the documentation on the site and the forum isn't incredibly helpful, so I am logging it here incase anyone should find it useful, but mainly if I have to do this again on another account I can remeber how and where to find everything.\n",
     "\n",
-    "1. Go to: https://azure.microsoft.com/en-gb/services/cognitive-services/\n",
+    "Go to: https://azure.microsoft.com/en-gb/services/cognitive-services/\n",
     "\n",
     "![](2020-12-01-HAL-O-World/azure_setup/01_cognitive_services.jpg)\n",
     "\n",
-    "2. Scroll to the API's section of the page, and select \"Web Search\"\n",
+    "Scroll to the API's section of the page, and select \"Web Search\"\n",
     "\n",
     "![](2020-12-01-HAL-O-World/azure_setup/02_cognitive_services.jpg)\n",
     "\n",
-    "3. this will redirect you to https://www.microsoft.com/en-us/bing/apis/bing-web-search-api\n",
+    "This will redirect you to https://www.microsoft.com/en-us/bing/apis/bing-web-search-api\n",
     "\n",
     "![](2020-12-01-HAL-O-World/azure_setup/03_bing_web_search_api.jpg)\n",
     "\n",
-    "4. Ensuring you already have an Azure account, this will take you to the console to create a Bing resource\n",
+    "Ensuring you already have an Azure account, this will take you to the console to create a Bing resource\n",
     "\n",
     "![](2020-12-01-HAL-O-World/azure_setup/04_microsoft_bingsearch_create.jpg)\n",
     "\n",
-    "5. Once you have filled in the details and created your resource it will take you to your Azure dashboard\n",
+    "Once you have filled in the details and created your resource it will take you to your Azure dashboard\n",
     "\n",
     "![](2020-12-01-HAL-O-World/azure_setup/05_microsoft_bingsearch_resource.jpg)\n",
     "\n",
-    "6. Go to the \"Keys and Endpoint\" tab, this is where you can find your Bing Image Search Api Key\n",
+    "Go to the \"Keys and Endpoint\" tab, this is where you can find your Bing Image Search Api Key\n",
     "\n",
     "![](2020-12-01-HAL-O-World/azure_setup/06_microsoft_bingsearch_key.jpg)\n",
     "\n",
