Adding latest blog post These Arent The Droids

--- a/_notebooks/2020-12-02-Greetings-Programs.ipynb
+++ b/_notebooks/2020-12-02-Greetings-Programs.ipynb
@@ -505,8 +505,6 @@
    "source": [
     "## Limitations Inherent To Machine Learning\n",
     "\n",
-    "From this picture we can now see some fundamental things about training a deep learning model:\n",
-    "\n",
     "- A model cannot be created without data.\n",
     "- A model can only learn to operate on the patterns seen in the input data used to train it.\n",
     "- This learning approach only creates *predictions*, not recommended *actions*.\n",
@@ -980,21 +978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validation Sets and Test Sets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use Judgment in Defining Test Sets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Questionnaire"
+    "# Questionnaire"
    ]
   },
   {
